# vector-search-for-md-docs

./: .gitignore  DESGIN.md  DESIGN.md  DEV_EXAMPLE.md  DEV_RULE.md  MD.md  README.md  SPEC.md  TASK_RULE.md  TECH_STACK.md
manage-tools/: config.toml  main.py  pyproject.toml  vector-db.sqlite
manage-tools/src/: main.py
manage-tools/src/core/: messages.py
manage-tools/src/core/tools/: management.py
manage-tools/src/interfaces/database/: connection.py  schema.py
manage-tools/src/interfaces/filesystem/: validation.py
manage-tools/src/utilities/: config.py
